--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,7 +9,7 @@ jobs:
             - name: welcome
               run: |
                echo "welcome"
-               ls
+               ls -lrta
                cat README.md
             - name: cowsay
               run: cowsay -f dragon "Hello" >> dragon.txt
