--- a/.github/workflows/ascii.yml
+++ b/.github/workflows/ascii.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        run: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: install
         run: sudo apt-get install cowsay -y
       - name: execute
