--- a/.github/workflows/ascii.yml
+++ b/.github/workflows/ascii.yml
@@ -1,7 +1,7 @@
 name: ascii
 on: push
 jobs:
-  ascii:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -10,10 +10,54 @@ jobs:
         run: sudo apt-get install cowsay -y
       - name: execute
         run: cowsay -f dragon "Hello" >> dragon.txt
+      # - name: test
+      #   run: grep -i "Hello" dragon.txt
+      # - name: read
+      #   run: cat dragon.txt
+      - name: list
+        run: ls -lrta
+      - name: upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: dragon.txt
+          path: dragon.txt    
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # - name: checkout
+      #   uses: actions/checkout@v4
+      # - name: install
+      #   run: sudo apt-get install cowsay -y
+      # - name: execute
+      #   run: cowsay -f dragon "Hello" >> dragon.txt
+      - name: download
+        uses: actions/download-artifact@v4
+        with:
+          name: dragon.txt
       - name: test
         run: grep -i "Hello" dragon.txt
+      # - name: read
+      #   run: cat dragon.txt
+      - name: list
+        run: ls -lrta
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      # - name: checkout
+      #   uses: actions/checkout@v4
+      # - name: install
+      #   run: sudo apt-get install cowsay -y
+      # - name: execute
+      #   run: cowsay -f dragon "Hello" >> dragon.txt
+      # - name: test
+      #   run: grep -i "Hello" dragon.txt
+      - name: download
+        uses: actions/download-artifact@v4
+        with:
+          name: dragon.txt      
       - name: read
         run: cat dragon.txt
       - name: list
-        run: ls -lrta
-    
+        run: ls -lrta                      
